compress the view a bit - new material UI seemed to have got bigger and so no longer managed to get 2 columns on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 h1 {
     margin-bottom: 8px;
+    padding-left: 8px;
 }
 
 .app-layout {
@@ -9,5 +10,5 @@ h1 {
 }
 
 .card {
-    padding: 8px !important;
+    padding: 0 8px 8px 0;
 }
