--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,10 @@ $theme: mat.define-light-theme(
 body {
     margin: 4px;
 }
+
+
+.mat-mdc-icon-button.mat-mdc-button-base {
+    width: 24px;
+    height: 24px;
+    padding: 0 0 0 2px;
+}
